--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -25,6 +25,13 @@
 
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="reportes">Reportes</a></li>
+                </ul>
+            </div>
+        </div>
+
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="/">Salir</a></li>
                 </ul>
             </div>
