--- a/app/templates/productos.html
+++ b/app/templates/productos.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- 🔹 clave para móviles -->
     <title>Ingreso de Productos al Stock</title>
     <link rel="stylesheet" href="/static/css/styles_productos.css">
+    <!-- Bootstrap para estilos -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
 
@@ -95,13 +97,13 @@
         <hr>
 
         <!-- Botón principal: envía el formulario al backend -->
-        <button type="submit" class="btn btn-primary">Registrar Ingreso</button>
-        
+        <button type="submit" class="btn btn-register">Registrar Ingreso</button>
+
         <!-- Botón secundario: redirige a la página de inicio -->
-        <a href="/home" class="btn btn-outline-secondary">Home 🏠</a>
-        
+        <a href="/home" class="btn btn-home">Home 🏠</a>
+
         <!-- Botón adicional: redirige a la gestión de inventario -->
-        <a href="/inventario" class="btn btn-primary">Gestión de Inventario</a>
+        <a href="/inventario" class="btn btn-inventary">Gestión de Inventario</a>
     </form>
 </div>
 
